@@ -6,6 +6,7 @@
 [-] #107: Suppression du fichier version, remplacé par la constante PLX_VERSION dans le fichier core/lib/config.php
 [+] Mise à jour traduction polonais: contribution 18jaguar18
 [+] Ajout de la constante PLX_FEED
+[+] Gestionnaire de médias, upload des fichiers: possibilité de sélectionner plusieurs fichiers à la fois
 BUG fix #101: Thème par défaut - problème de retour à la ligne dans l'affichage des tags 
 BUG fix #102: Thème par défaut - la sidebar passe dans le footer après désactivation du captcha
 BUG fix #103: La recherche dans les articles ne fonctionne dans l'administration pas à partir du champ "Rechercher"
